# steamcard-downloader

./: pyproject.toml
downloader/: __init__.py  __main__.py  downloader.py
test/: gamepage-appid-620.html  test_downloader.py
