[tool.poetry]
name = "steamcard-downloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
beautifulsoup4 = "^4.9.1"
requests = "^2.24.0"
flake8 = "^3.8.3"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
