[tool.poetry]
name = "steamcard-downloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.3"
pylint = "^2.6.0"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
responses = "^0.12.0"
rope = "^0.17.0"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov downloader --cov-report xml"

[tool.coverage.run]
branch = true
